--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
         android:id="@+id/button"
         android:layout_width="61dp"
         android:layout_height="56dp"
-        android:text="Button"
+        android:text="C"
         tools:layout_editor_absoluteX="27dp"
         tools:layout_editor_absoluteY="200dp" />
 
@@ -18,7 +18,7 @@
         android:id="@+id/button2"
         android:layout_width="66dp"
         android:layout_height="53dp"
-        android:text="Button"
+        android:text="^"
         tools:layout_editor_absoluteX="115dp"
         tools:layout_editor_absoluteY="200dp" />
 
@@ -26,7 +26,7 @@
         android:id="@+id/button3"
         android:layout_width="65dp"
         android:layout_height="51dp"
-        android:text="Button"
+        android:text="%"
         tools:layout_editor_absoluteX="203dp"
         tools:layout_editor_absoluteY="200dp" />
 
@@ -34,7 +34,7 @@
         android:id="@+id/button4"
         android:layout_width="64dp"
         android:layout_height="56dp"
-        android:text="Button"
+        android:text="/"
         tools:layout_editor_absoluteX="291dp"
         tools:layout_editor_absoluteY="200dp" />
 
@@ -42,7 +42,7 @@
         android:id="@+id/button5"
         android:layout_width="61dp"
         android:layout_height="58dp"
-        android:text="Button"
+        android:text="7"
         tools:layout_editor_absoluteX="27dp"
         tools:layout_editor_absoluteY="291dp" />
 
@@ -50,7 +50,7 @@
         android:id="@+id/button6"
         android:layout_width="61dp"
         android:layout_height="60dp"
-        android:text="Button"
+        android:text="4"
         tools:layout_editor_absoluteX="27dp"
         tools:layout_editor_absoluteY="367dp" />
 
@@ -58,7 +58,7 @@
         android:id="@+id/button7"
         android:layout_width="64dp"
         android:layout_height="56dp"
-        android:text="Button"
+        android:text="1"
         tools:layout_editor_absoluteX="27dp"
         tools:layout_editor_absoluteY="456dp" />
 
@@ -66,7 +66,7 @@
         android:id="@+id/button8"
         android:layout_width="63dp"
         android:layout_height="61dp"
-        android:text="Button"
+        android:text="0"
         tools:layout_editor_absoluteX="27dp"
         tools:layout_editor_absoluteY="535dp" />
 
@@ -74,7 +74,7 @@
         android:id="@+id/button9"
         android:layout_width="68dp"
         android:layout_height="56dp"
-        android:text="Button"
+        android:text="8"
         tools:layout_editor_absoluteX="115dp"
         tools:layout_editor_absoluteY="293dp" />
 
@@ -82,7 +82,7 @@
         android:id="@+id/button10"
         android:layout_width="64dp"
         android:layout_height="56dp"
-        android:text="Button"
+        android:text="9"
         tools:layout_editor_absoluteX="203dp"
         tools:layout_editor_absoluteY="294dp" />
 
@@ -90,7 +90,7 @@
         android:id="@+id/button11"
         android:layout_width="63dp"
         android:layout_height="51dp"
-        android:text="Button"
+        android:text="X"
         tools:layout_editor_absoluteX="291dp"
         tools:layout_editor_absoluteY="291dp" />
 
@@ -98,7 +98,7 @@
         android:id="@+id/button12"
         android:layout_width="65dp"
         android:layout_height="58dp"
-        android:text="Button"
+        android:text="5"
         tools:layout_editor_absoluteX="115dp"
         tools:layout_editor_absoluteY="375dp" />
 
@@ -106,7 +106,7 @@
         android:id="@+id/button13"
         android:layout_width="62dp"
         android:layout_height="52dp"
-        android:text="Button"
+        android:text="6"
         tools:layout_editor_absoluteX="209dp"
         tools:layout_editor_absoluteY="378dp" />
 
@@ -114,7 +114,7 @@
         android:id="@+id/button14"
         android:layout_width="58dp"
         android:layout_height="52dp"
-        android:text="Button"
+        android:text="-"
         tools:layout_editor_absoluteX="299dp"
         tools:layout_editor_absoluteY="373dp" />
 
@@ -122,7 +122,7 @@
         android:id="@+id/button15"
         android:layout_width="64dp"
         android:layout_height="58dp"
-        android:text="Button"
+        android:text="2"
         tools:layout_editor_absoluteX="120dp"
         tools:layout_editor_absoluteY="456dp" />
 
@@ -130,7 +130,7 @@
         android:id="@+id/button16"
         android:layout_width="62dp"
         android:layout_height="54dp"
-        android:text="Button"
+        android:text="3"
         tools:layout_editor_absoluteX="215dp"
         tools:layout_editor_absoluteY="456dp" />
 
@@ -138,7 +138,7 @@
         android:id="@+id/button17"
         android:layout_width="62dp"
         android:layout_height="59dp"
-        android:text="Button"
+        android:text="."
         tools:layout_editor_absoluteX="122dp"
         tools:layout_editor_absoluteY="535dp" />
 
@@ -146,7 +146,7 @@
         android:id="@+id/button18"
         android:layout_width="68dp"
         android:layout_height="59dp"
-        android:text="Button"
+        android:text="="
         tools:layout_editor_absoluteX="215dp"
         tools:layout_editor_absoluteY="535dp" />
 
@@ -154,7 +154,7 @@
         android:id="@+id/button19"
         android:layout_width="58dp"
         android:layout_height="131dp"
-        android:text="Button"
+        android:text="+"
         tools:layout_editor_absoluteX="300dp"
         tools:layout_editor_absoluteY="463dp" />
 
