--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,164 +7,219 @@
     tools:context=".MainActivity">
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnClean"
         android:layout_width="61dp"
         android:layout_height="56dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginLeft="36dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="32dp"
+        android:background="#00F01111"
         android:text="C"
-        tools:layout_editor_absoluteX="27dp"
-        tools:layout_editor_absoluteY="200dp" />
+        app:layout_constraintBottom_toTopOf="@+id/button5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.972" />
 
     <Button
-        android:id="@+id/button2"
-        android:layout_width="66dp"
-        android:layout_height="53dp"
-        android:text="^"
-        tools:layout_editor_absoluteX="115dp"
-        tools:layout_editor_absoluteY="200dp" />
-
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="65dp"
-        android:layout_height="51dp"
-        android:text="%"
-        tools:layout_editor_absoluteX="203dp"
-        tools:layout_editor_absoluteY="200dp" />
-
-    <Button
-        android:id="@+id/button4"
-        android:layout_width="64dp"
+        android:id="@+id/btnPotencia"
+        android:layout_width="61dp"
         android:layout_height="56dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="36dp"
+        android:text="^"
+        app:layout_constraintBottom_toTopOf="@+id/btn8"
+        app:layout_constraintEnd_toStartOf="@+id/btnPorcentaje"
+        app:layout_constraintHorizontal_bias="0.828"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <Button
+        android:id="@+id/btnPorcentaje"
+        android:layout_width="61dp"
+        android:layout_height="56dp"
+        android:layout_marginTop="184dp"
+        android:text="%"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="223dp" />
+
+    <Button
+        android:id="@+id/btn7"
+        android:layout_width="61dp"
+        android:layout_height="59dp"
+        android:layout_marginTop="184dp"
+        android:layout_marginEnd="36dp"
+        android:layout_marginRight="36dp"
         android:text="/"
-        tools:layout_editor_absoluteX="291dp"
-        tools:layout_editor_absoluteY="200dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/button5"
         android:layout_width="61dp"
         android:layout_height="58dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginLeft="36dp"
+        android:layout_marginTop="276dp"
         android:text="7"
-        tools:layout_editor_absoluteX="27dp"
-        tools:layout_editor_absoluteY="291dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button6"
+        android:id="@+id/btn4"
         android:layout_width="61dp"
         android:layout_height="60dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginLeft="36dp"
+        android:layout_marginBottom="300dp"
         android:text="4"
-        tools:layout_editor_absoluteX="27dp"
-        tools:layout_editor_absoluteY="367dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/button7"
+        android:id="@+id/btn1"
         android:layout_width="64dp"
         android:layout_height="56dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginLeft="36dp"
+        android:layout_marginBottom="216dp"
         android:text="1"
-        tools:layout_editor_absoluteX="27dp"
-        tools:layout_editor_absoluteY="456dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/button8"
+        android:id="@+id/btn0"
         android:layout_width="63dp"
         android:layout_height="61dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginLeft="36dp"
+        android:layout_marginBottom="124dp"
         android:text="0"
-        tools:layout_editor_absoluteX="27dp"
-        tools:layout_editor_absoluteY="535dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/button9"
-        android:layout_width="68dp"
-        android:layout_height="56dp"
-        android:text="8"
-        tools:layout_editor_absoluteX="115dp"
-        tools:layout_editor_absoluteY="293dp" />
-
-    <Button
-        android:id="@+id/button10"
-        android:layout_width="64dp"
-        android:layout_height="56dp"
-        android:text="9"
-        tools:layout_editor_absoluteX="203dp"
-        tools:layout_editor_absoluteY="294dp" />
-
-    <Button
-        android:id="@+id/button11"
-        android:layout_width="63dp"
-        android:layout_height="51dp"
-        android:text="X"
-        tools:layout_editor_absoluteX="291dp"
-        tools:layout_editor_absoluteY="291dp" />
-
-    <Button
-        android:id="@+id/button12"
-        android:layout_width="65dp"
-        android:layout_height="58dp"
-        android:text="5"
-        tools:layout_editor_absoluteX="115dp"
-        tools:layout_editor_absoluteY="375dp" />
-
-    <Button
-        android:id="@+id/button13"
+        android:id="@+id/btn8"
         android:layout_width="62dp"
-        android:layout_height="52dp"
-        android:text="6"
-        tools:layout_editor_absoluteX="209dp"
-        tools:layout_editor_absoluteY="378dp" />
+        android:layout_height="53dp"
+        android:layout_marginTop="276dp"
+        android:text="8"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="129dp" />
 
     <Button
-        android:id="@+id/button14"
+        android:id="@+id/btn9"
+        android:layout_width="63dp"
+        android:layout_height="56dp"
+        android:layout_marginTop="276dp"
+        android:text="9"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="223dp" />
+
+    <Button
+        android:id="@+id/btnMultiplicacion"
+        android:layout_width="61dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="276dp"
+        android:layout_marginEnd="36dp"
+        android:layout_marginRight="36dp"
+        android:text="X"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btn5"
         android:layout_width="58dp"
-        android:layout_height="52dp"
-        android:text="-"
-        tools:layout_editor_absoluteX="299dp"
-        tools:layout_editor_absoluteY="373dp" />
+        android:layout_height="59dp"
+        android:layout_marginBottom="300dp"
+        android:text="5"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:layout_editor_absoluteX="129dp" />
 
     <Button
-        android:id="@+id/button15"
-        android:layout_width="64dp"
+        android:id="@+id/btn6"
+        android:layout_width="62dp"
+        android:layout_height="57dp"
+        android:layout_marginBottom="300dp"
+        android:text="6"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:layout_editor_absoluteX="223dp" />
+
+    <Button
+        android:id="@+id/btnResta"
+        android:layout_width="58dp"
         android:layout_height="58dp"
-        android:text="2"
-        tools:layout_editor_absoluteX="120dp"
-        tools:layout_editor_absoluteY="456dp" />
+        android:layout_marginBottom="300dp"
+        android:text="-"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:layout_editor_absoluteX="317dp" />
 
     <Button
-        android:id="@+id/button16"
+        android:id="@+id/btn2"
+        android:layout_width="57dp"
+        android:layout_height="57dp"
+        android:layout_marginBottom="216dp"
+        android:text="2"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:layout_editor_absoluteX="129dp" />
+
+    <Button
+        android:id="@+id/btn3"
         android:layout_width="62dp"
         android:layout_height="54dp"
+        android:layout_marginBottom="216dp"
         android:text="3"
-        tools:layout_editor_absoluteX="215dp"
-        tools:layout_editor_absoluteY="456dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:layout_editor_absoluteX="223dp" />
 
     <Button
-        android:id="@+id/button17"
+        android:id="@+id/btnPunto"
         android:layout_width="62dp"
         android:layout_height="59dp"
+        android:layout_marginBottom="124dp"
         android:text="."
-        tools:layout_editor_absoluteX="122dp"
-        tools:layout_editor_absoluteY="535dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:layout_editor_absoluteX="129dp" />
 
     <Button
-        android:id="@+id/button18"
-        android:layout_width="68dp"
-        android:layout_height="59dp"
+        android:id="@+id/btnIgual"
+        android:layout_width="62dp"
+        android:layout_height="60dp"
+        android:layout_marginBottom="124dp"
         android:text="="
-        tools:layout_editor_absoluteX="215dp"
-        tools:layout_editor_absoluteY="535dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:layout_editor_absoluteX="222dp" />
 
     <Button
-        android:id="@+id/button19"
-        android:layout_width="58dp"
-        android:layout_height="131dp"
+        android:id="@+id/btnSuma"
+        android:layout_width="57dp"
+        android:layout_height="144dp"
+        android:layout_marginEnd="36dp"
+        android:layout_marginRight="36dp"
+        android:layout_marginBottom="124dp"
         android:text="+"
-        tools:layout_editor_absoluteX="300dp"
-        tools:layout_editor_absoluteY="463dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <EditText
-        android:id="@+id/editText"
-        android:layout_width="311dp"
-        android:layout_height="93dp"
+        android:id="@+id/editText2"
+        android:layout_width="334dp"
+        android:layout_height="66dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginLeft="36dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:ems="10"
         android:inputType="numberDecimal"
-        tools:layout_editor_absoluteX="38dp"
-        tools:layout_editor_absoluteY="78dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
